# crmd

./: README.md  crmd.py  index.html  pyproject.toml  requirements.in  setup.py
.github/workflows/: ci.yml
scripts/: build_deb.sh
tests/: test_basic.py  test_new_features.py
