[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crmd"
version = "0.2.1"
description = "Terminal CRM with OpenAI integration"
authors = [{name="Your Name"}]
requires-python = ">=3.8"
dependencies = [
    "typer[all]",
    "pyyaml",
    "rich",
    "textual",
    "openai"
]

[project.scripts]
crmd = "crmd:app"
crmd-worker = "crmd:worker_cmd"
